@@ -57,6 +57,17 @@ MAGE_HITPOINT_BONUS = true
 # their stuff, suicide them, etc, as a way of accumulating funds.
 NEWBIES_CANNOT_DROP = true
 
+# Option: This allows you to make it so that the lvl stays static until
+# the random unstaticer makes it unstatic on player death.
+# at 201 (10050ft) it is the same as normal when player dies/ghost dies lvl
+# unstatics. Set for 8 it would mean after 400ft when a player dies the lvl
+# will stay static for a random time. Deeper the level the longer the static.
+PRESERVE_DEATH_LEVEL = 201
+
+# Option: Adds another call upon turning to ghost to insta kill player
+# Default is False. Player ghosts live. if TRUE ghosts die instantly
+NO_GHOST = false
+
 # Option : bumping into a door will automatically try to open it
 DOOR_BUMP_OPEN = true
 
