@@ -179,6 +179,8 @@ extern s16b cfg_fps;
 extern bool cfg_mage_hp_bonus;
 extern bool cfg_newbies_cannot_drop;
 extern bool cfg_door_bump_open;
+extern s32b cfg_preserve_death_level;
+extern bool cfg_no_ghost;
 extern s32b cfg_unique_respawn_time;
 extern s32b cfg_unique_max_respawn_time;
 extern s32b cfg_level_unstatic_chance;
