@@ -182,6 +182,8 @@ s16b cfg_fps = 12;
 bool cfg_mage_hp_bonus = 1;
 bool cfg_newbies_cannot_drop = 0;
 bool cfg_door_bump_open = 1;
+s32b cfg_preserve_death_level = 201;
+bool cfg_no_ghost = 0;
 s32b cfg_unique_respawn_time = 300;
 s32b cfg_unique_max_respawn_time = 50000;
 s32b cfg_level_unstatic_chance = 60;
